--- a/libpictureoptions/src/main/res/values/strings.xml
+++ b/libpictureoptions/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="confirm">确认</string>
     <string name="cancel">取消</string>
     <string name="take_picture">拍照</string>
+    <string name="video">录像</string>
 </resources>
